Maximum number if FastQ lines to check added. Includes an all line check (specify -1) Includes skipping the line check (specify 0).

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -7,7 +7,7 @@ Number = 194
 PairedEnd = True
 
 [Options]
-CheckFastQLines = False
+MaxFastQLinesToCheck = 10000000
 # Raw V-V Parameters.  Assessed based on MultiQC data.
 SequenceLengthVariationTolerance = 0.05
 
