--- a/config/python/test.config
+++ b/config/python/test.config
@@ -7,7 +7,7 @@ Number = 194
 PairedEnd = True
 
 [Options]
-CheckFastQLines = False
+MaxFastQLinesToCheck = 12000
 # Raw V-V Parameters.  Assessed based on MultiQC data.
 SequenceLengthVariationTolerance = 0.05
 
