Reworked MultiQC data checks. Uses new parsing model for both ISA and multiQC files. Includes outlier checks for percent GC, sequence length, percent duplicates, read counts. Added relevant parameters to configuration file.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -7,9 +7,14 @@ Number = 194
 PairedEnd = True
 
 [Options]
-MaxFastQLinesToCheck = 10000000
+#MaxFastQLinesToCheck = 10000000
+# REMOVE THIS FOR DEBUG
+MaxFastQLinesToCheck = 1000
 # Raw V-V Parameters.  Assessed based on MultiQC data.
-SequenceLengthVariationTolerance = 0.05
+SequenceLengthVariationTolerance = 0
+PercentGCVariationTolerance = 2
+TotalSequencesVariationTolerance = 2
+PercentDuplicatesVariationTolerance = 2
 
 [Naming]
 # this is the suffix attached by fastQC
