Configuration for trimmedQC VV.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -1,6 +1,5 @@
 [Logging]
-LoggingConsole = INFO
-LoggingFile = DEBUG
+LoggingConsole = DEBUG
 
 [GLDS]
 Number = 194
@@ -10,15 +9,27 @@ PairedEnd = True
 #MaxFastQLinesToCheck = 10000000
 # REMOVE THIS FOR DEBUG
 MaxFastQLinesToCheck = 1000
+
+[Raw]
 # Raw V-V Parameters.  Assessed based on MultiQC data.
 SequenceLengthVariationTolerance = 0
 PercentGCVariationTolerance = 2
 TotalSequencesVariationTolerance = 2
 PercentDuplicatesVariationTolerance = 2
 
+[Trimmed]
+# Trimmed V-V Parameters.  Assessed based on MultiQC data.
+SequenceLengthVariationTolerance = 0.5
+PercentGCVariationTolerance = 2
+TotalSequencesVariationTolerance = 2
+PercentDuplicatesVariationTolerance = 2
+
 [Naming]
 # this is the suffix attached by fastQC
-FastQCSuffix = _raw_fastqc
+RawFastQCSuffix = _raw_fastqc
+RawReadsSuffix = _raw
+TrimmedFastQCSuffix = _trimmed_fastqc
+TrimmedReadsSuffix = _trimmed
 
 [Paths]
 DataPath = /data2/JO_Internship_2021/V-V_scripts/GLDS-${GLDS:Number}
@@ -26,3 +37,6 @@ ISAZip = ${DataPath}/Metadata/GLDS-${GLDS:Number}_metadata_GLDS-${GLDS:Number}-I
 RawReadDir = ${DataPath}/00-RawData
 RawFastQCDir = ${DataPath}/00-RawData/FastQC_Reports
 RawMultiQCZip = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/raw_multiqc_data.zip
+TrimmedReadDir = ${DataPath}/01-TG_Preproc
+TrimmedFastQCDir = ${TrimmedReadDir}/FastQC_Reports
+TrimmedMultiQCZip = ${TrimmedReadDir}/FastQC_Reports/trimmed_multiqc_report/trimmed_multiqc_data.zip
