Note to clarify current logging level parameter limitation.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -1,4 +1,6 @@
 [Logging]
+# Note: due to a quirk in the ISA library, this must be kept as DEBUG to ensure
+#   debug file contents includes debug level logging statements.
 LoggingConsole = DEBUG
 
 [GLDS]
