Added Star File Checking. Includes associated Star results parsing class. Includes associated configuration and addition to main VV script.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -42,3 +42,4 @@ RawMultiQCZip = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/raw_mul
 TrimmedReadDir = ${DataPath}/01-TG_Preproc
 TrimmedFastQCDir = ${TrimmedReadDir}/FastQC_Reports
 TrimmedMultiQCZip = ${TrimmedReadDir}/FastQC_Reports/trimmed_multiqc_report/trimmed_multiqc_data.zip
+StarParentDir = ${DataPath}/02-STAR_Alignment
