Added Rsem VV. Includes associated config. Includes addition to main program.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -26,6 +26,9 @@ PercentGCVariationTolerance = 2
 TotalSequencesVariationTolerance = 2
 PercentDuplicatesVariationTolerance = 2
 
+[Rsem]
+CountsVariationTolerance = 0
+
 [Naming]
 # this is the suffix attached by fastQC
 RawFastQCSuffix = _raw_fastqc
@@ -43,3 +46,4 @@ TrimmedReadDir = ${DataPath}/01-TG_Preproc
 TrimmedFastQCDir = ${TrimmedReadDir}/FastQC_Reports
 TrimmedMultiQCZip = ${TrimmedReadDir}/FastQC_Reports/trimmed_multiqc_report/trimmed_multiqc_data.zip
 StarParentDir = ${DataPath}/02-STAR_Alignment
+RsemParentDir = ${DataPath}/03-RSEM_Counts
