--- a/config/python/local.config
+++ b/config/python/local.config
@@ -29,6 +29,9 @@ PercentDuplicatesVariationTolerance = 2
 [Rsem]
 CountsVariationTolerance = 0
 
+[Deseq2]
+HasERCC = True
+
 [Naming]
 # this is the suffix attached by fastQC
 RawFastQCSuffix = _raw_fastqc
@@ -47,3 +50,4 @@ TrimmedFastQCDir = ${TrimmedReadDir}/FastQC_Reports
 TrimmedMultiQCZip = ${TrimmedReadDir}/FastQC_Reports/trimmed_multiqc_report/trimmed_multiqc_data.zip
 StarParentDir = ${DataPath}/02-STAR_Alignment
 RsemParentDir = ${DataPath}/03-RSEM_Counts
+Deseq2ParentDir = ${DataPath}/04-DESeq2_NormCounts
