Stash style commit for data objects branch.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -2,6 +2,7 @@
 # Note: due to a quirk in the ISA library, this must be kept as DEBUG to ensure
 #   debug file contents includes debug level logging statements.
 LoggingConsole = DEBUG
+HaltSeverity = 90
 
 [GLDS]
 Number = 194
@@ -13,6 +14,10 @@ PairedEnd = True
 MaxFastQLinesToCheck = 1000
 
 [Raw]
+# Raw V-V Parameters based on raw read files
+FileSizeVariationToleranceYellow = 2
+FileSizeVariationToleranceRed = 4
+
 # Raw V-V Parameters.  Assessed based on MultiQC data.
 SequenceLengthVariationTolerance = 0
 PercentGCVariationTolerance = 2
@@ -40,14 +45,14 @@ TrimmedFastQCSuffix = _trimmed_fastqc
 TrimmedReadsSuffix = _trimmed
 
 [Paths]
-DataPath = /data2/JO_Internship_2021/V-V_scripts/GLDS-${GLDS:Number}
+DataPath = /home/joribello/Documents/OneDrive/NASA/Fall2020/project/V-V_scripts/VV_testing/broken_001/GLDS-${GLDS:Number}
 ISAZip = ${DataPath}/Metadata/GLDS-${GLDS:Number}_metadata_GLDS-${GLDS:Number}-ISA.zip
-RawReadDir = ${DataPath}/00-RawData
+RawReadDir = ${DataPath}/00-RawData/Fastq
 RawFastQCDir = ${DataPath}/00-RawData/FastQC_Reports
-RawMultiQCZip = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/raw_multiqc_data.zip
-TrimmedReadDir = ${DataPath}/01-TG_Preproc
-TrimmedFastQCDir = ${TrimmedReadDir}/FastQC_Reports
-TrimmedMultiQCZip = ${TrimmedReadDir}/FastQC_Reports/trimmed_multiqc_report/trimmed_multiqc_data.zip
+RawMultiQCDir = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/multiqc_data
+TrimmedReadDir = ${DataPath}/01-TG_Preproc/Fastq
+TrimmedFastQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports
+TrimmedMultiQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports/trimmed_multiqc_report/multiqc_data
 StarParentDir = ${DataPath}/02-STAR_Alignment
 RsemParentDir = ${DataPath}/03-RSEM_Counts
 Deseq2ParentDir = ${DataPath}/04-DESeq2_NormCounts
