--- a/config/python/test.config
+++ b/config/python/test.config
@@ -1,6 +1,7 @@
 [Logging]
 LoggingConsole = DEBUG
 LoggingFile = DEBUG
+HaltSeverity = 91
 
 [GLDS]
 Number = 194
@@ -14,10 +15,3 @@ SequenceLengthVariationTolerance = 0.05
 [Naming]
 # this is the suffix attached by fastQC
 FastQCSuffix = _raw_fastqc
-
-[Paths]
-DataPath = /data2/JO_Internship_2021/V-V_scripts/GLDS-${GLDS:Number}
-ISAZip = ${DataPath}/Metadata/GLDS-${GLDS:Number}_metadata_GLDS-${GLDS:Number}-ISA.zip
-RawReadDir = ${DataPath}/00-RawData
-RawFastQCDir = ${DataPath}/00-RawData/FastQC_Reports
-RawMultiQCZip = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/raw_multiqc_data.zip
