Added new config params for checks.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -20,9 +20,33 @@ FileSizeVariationToleranceRed = 4
 
 # Raw V-V Parameters.  Assessed based on MultiQC data.
 SequenceLengthVariationTolerance = 0
-PercentGCVariationTolerance = 2
 TotalSequencesVariationTolerance = 2
-PercentDuplicatesVariationTolerance = 2
+
+PerBaseSequenceQualityGlobalValueThresholdRed = 99999
+PerBaseSequenceQualityGlobalValueThresholdYellow = 99999
+PerBaseSequenceQualityVariationToleranceRed = 2
+PerBaseSequenceQualityVariationToleranceYellow = 3
+
+PerBaseNContentGlobalValueThresholdRed = 8
+PerBaseNGlobalValueThresholdYellow = 3
+PerBaseNVariationToleranceRed = 1
+PerBaseNVariationToleranceYellow = 2
+
+PercentTopOverrepresentedVariationToleranceRed = 4
+PercentTopOverrepresentedVariationToleranceYellow = 2
+PercentTopOverrepresentedGlobalThresholdRed = 60
+PercentTopOverrepresentedGlobalThresholdYellow = 40
+
+PercentDuplicatesVariationToleranceRed = 4
+PercentDuplicatesVariationToleranceYellow = 2
+PercentDuplicatesGlobalThresholdRed = 60
+PercentDuplicatesGlobalThresholdYellow = 40
+
+PercentGCVariationToleranceRed = 4
+PercentGCVariationToleranceYellow = 2
+ # set to 9999999 to effecively disable global threshold requirement
+PercentGCGlobalThresholdRed = 9999999
+PercentGCGlobalThresholdYellow = 9999999
 
 [Trimmed]
 # Trimmed V-V Parameters.  Assessed based on MultiQC data.
