Added input for DGE results from DESEQ2 script. Renamed Deseq2NormalizedCounts to Deseq2ScriptOutput to reflect this object will now handle both normalized counts and dge results.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -16,4 +16,5 @@ TrimmedFastQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports
 TrimmedMultiQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports/trimmed_multiqc_report/multiqc_data
 StarParentDir = ${DataPath}/02-STAR_Alignment
 RsemParentDir = ${DataPath}/03-RSEM_Counts
-Deseq2ParentDir = ${DataPath}/04-DESeq2_NormCounts
+Deseq2NormCountsParentDir = ${DataPath}/04-DESeq2_NormCounts
+Deseq2DGEParentDir = ${DataPath}/05-DESeq2_DGE
