Additional checks and check framework. Added cross checking framework for checks that require data from other steps like D_0005.
Added samplesheet parsing.  This will be generated from ISA and will 
serve to replace direct ISA parsing into the VV and eventually the 
workflow itself.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -3,11 +3,11 @@ HaltSeverity = 90
 
 [GLDS]
 Number = 194
-PairedEnd = True
 
 [Paths]
 DataPath = /home/joribello/Documents/OneDrive/NASA/Fall2020/project/V-V_scripts/VV_testing/GLDS-${GLDS:Number}
 ISAZip = ${DataPath}/Metadata/GLDS-${GLDS:Number}_metadata_GLDS-${GLDS:Number}-ISA.zip
+SampleSheetPath = ${DataPath}/Metadata/GLDS-${GLDS:Number}_RNASeq_samplesheet.csv
 RawReadDir = ${DataPath}/00-RawData/Fastq
 RawFastQCDir = ${DataPath}/00-RawData/FastQC_Reports
 RawMultiQCDir = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/multiqc_data
