Removed unneeded Path configs. Only the main path should need to be specified.

--- a/config/python/local.config
+++ b/config/python/local.config
@@ -1,20 +1,5 @@
 [Logging]
 HaltSeverity = 90
 
-[GLDS]
-Number = 194
-
 [Paths]
-DataPath = /home/joribello/Documents/OneDrive/NASA/Fall2020/project/V-V_scripts/VV_testing/GLDS-${GLDS:Number}
-ISAZip = ${DataPath}/Metadata/GLDS-${GLDS:Number}_metadata_GLDS-${GLDS:Number}-ISA.zip
-SampleSheetPath = ${DataPath}/Metadata/GLDS-${GLDS:Number}_RNASeq_samplesheet.csv
-RawReadDir = ${DataPath}/00-RawData/Fastq
-RawFastQCDir = ${DataPath}/00-RawData/FastQC_Reports
-RawMultiQCDir = ${DataPath}/00-RawData/FastQC_Reports/raw_multiqc_report/multiqc_data
-TrimmedReadDir = ${DataPath}/01-TG_Preproc/Fastq
-TrimmedFastQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports
-TrimmedMultiQCDir = ${DataPath}/01-TG_Preproc/FastQC_Reports/trimmed_multiqc_report/multiqc_data
-StarParentDir = ${DataPath}/02-STAR_Alignment
-RsemParentDir = ${DataPath}/03-RSEM_Counts
-Deseq2NormCountsParentDir = ${DataPath}/04-DESeq2_NormCounts
-Deseq2DGEParentDir = ${DataPath}/05-DESeq2_DGE
+DataPath = /home/joribello/Documents/OneDrive/NASA/Fall2020/project/V-V_scripts/VV_testing/GLDS-194
